<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="Settings" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile_black_24dp"
        android:title="Profile" />
    <item
        android:id="@+id/nav_main"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="Home" />
    <item
        android:id="@+id/nav_matches"
        android:icon="@drawable/ic_chat_black_24dp"
        android:title="Chat" />
    <item
        android:id="@+id/nav_tags"
        android:icon="@drawable/ic_library_tags_black_24dp"
        android:title="Tags" />

</menu>
