<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tagsFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pinder.app.ui.TagsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5sp">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tagsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:paddingBottom="50dp"

            tools:listitem="@layout/item_tags_manager" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_add_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_margin="32dp"
        android:backgroundTint="#FFF3F3F3"
        app:borderWidth="0sp"
        app:srcCompat="@drawable/ic_add_image" />

</FrameLayout>