...
        android:orientation="vertical"
        android:padding="5sp">



        <ImageView
            android:id="@+id/locationButton"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:padding="4sp"
            android:src="@drawable/location"
...
